# project-genesis

./: .gitignore  CONTEXT.md  LEARNINGS.md  LICENSE  Makefile  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_issue.md  feature_request.md  operational_issue.md
.github/scripts/: generate_helm_override.py  promote_images.py  resolve_dependencies.py
.github/workflows/: build-python-services.yml  build-single-service.yml  deploy-services.yml  deploy-single-service.yml
docs/: architecture.md  devops.md  devsecops.md  fault_tolerance.md  finops.md  setup.md  site_reliability.md  testing-strategy.md
docs/infra/: ANSIBLE.md
eventsApp/: TODO.md  audit-log-analysis_app.py
eventsApp/audit-log-analysis/: Dockerfile  app.py  k8s-deployment.yaml  k8s-service.yaml  pyproject.toml
infra/: README.md  pyproject.toml  requirements.txt
infra/ansible/: ansible.cfg  deploy_github_runner.yaml  homelab.yaml  inventory.ini  requirements.yml
infra/ansible/group_vars/k3s_cluster/: k3s_cluster.yaml  vault.yaml
infra/ansible/host_vars/: localhost.yaml
infra/ansible/playbooks/: deploy_k8s_services.yml
infra/ansible/roles/deploy_k8s_services/tasks/: main.yml
infra/ansible/roles/deploy_k8s_services/vars/: main.yaml
infra/ansible/roles/k3s_master/tasks/: main.yaml
infra/ansible/roles/k3s_worker/tasks/: main.yaml
infra/context/: CONTEXT.md  CONTEXT_ANSIBLE.md
infra/dockerfiles/debugger/: Dockerfile
infra/dockerfiles/github-runner/: Dockerfile  NOTES.txt  entrypoint.sh
infra/kubernetes/github-runner/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  github-runner-pvc.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
k8s/: k8s_context.md
src/audit-event-generator/: CONTEXT.md  README.md  pyproject.toml
src/audit-event-generator/tests/: conftest.py  test_event_generation.py  test_metrics_collection.py  test_rabbitmq_publisher.py
src/audit-log-analysis/: CONTEXT.md  README.md  pyproject.toml  requirements.txt
src/audit-log-analysis/audit_analysis/: api.py  health_manager.py  logger_config.py  main.py  metrics.py  redis_service.py
src/audit-log-analysis/tests/: conftest.py  test_analyze_critical_file_modifications.py  test_analyze_failed_login_attempts.py  test_api.py  test_config.py  test_extras.py  test_health_manager.py  test_main.py  test_message_flow.py  test_metrics.py  test_publish_alert  test_rabbitmq_consumer_service.py  test_redis_service.py
src/event-audit-dashboard/: CONTEXT.md  Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt
src/event-audit-dashboard/event_audit_dashboard/: app.py
src/event-audit-dashboard/event_audit_dashboard/templates/: alerts.html  error.html  index.html
src/event-audit-dashboard/tests/: test_dashboard_routes.py  test_healthz.py
src/notification-service/: CONTEXT.md  Dockerfile  README.md  pyproject.toml
src/notification-service/notification_service/: config.py  main.py  test_db_connection.py  test_global_fixed.py
src/notification-service/tests/: conftest.py  test_api_alert_id.py  test_api_alerts.py  test_api_healthz.py  test_api_register_routes.py  test_basic.py  test_config.py  test_logger_config.py  test_pg_connection.py  test_pg_fetch_all.py  test_pg_fetch_by_id.py  test_pg_insert_alert.py  test_rmq_connection.py  test_rmq_consumption.py  test_rmq_message_callback.py
(+63 files in other folders)
