[project]
name = "infra"
version = "0.1.0"
description = "Infrastructure Management"
authors = [
    {name = "Jojees",email = "joji@jojees.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible (>=11.8.0,<12.0.0)",
    "kubernetes (>=33.1.0,<34.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
